--- a/src/app/code/Komoju/Payments/view/frontend/layout/checkout_index_index.xml
+++ b/src/app/code/Komoju/Payments/view/frontend/layout/checkout_index_index.xml
@@ -1,4 +1,5 @@
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<?xml version="1.0"?>
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="checkout.root">
             <arguments>
@@ -13,14 +14,12 @@
                                             <item name="children" xsi:type="array">
                                                 <item name="payment" xsi:type="array">
                                                     <item name="children" xsi:type="array">
-                                                        <!-- Declare the payment method (the component that registrates in the list). START -->
                                                         <item name="renders" xsi:type="array">
+                                                            <!-- merge payment method renders here -->
                                                             <item name="children" xsi:type="array">
-                                                                <item name="komoju" xsi:type="array">
-                                                                    <!-- Example of value: Magento_Authorizenet/js/view/payment/authorizenet-->
+                                                                <item name="komoju_payments" xsi:type="array">
                                                                     <item name="component" xsi:type="string">Komoju_Payments/js/view/payment/komoju_payments</item>
                                                                     <item name="methods" xsi:type="array">
-                                                                        <!-- Add this if your payment method requires entering a billing address-->
                                                                         <item name="komoju_payments" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
@@ -28,7 +27,6 @@
                                                                 </item>
                                                             </item>
                                                         </item>
-                                                        <!-- Declare the payment method (the component that registrates in the list). END -->
                                                     </item>
                                                 </item>
                                             </item>
