Convert Payment Type to i18n translatable value
For the text on the webpages to be picked up by Magento when it's
building the language dictionaries it needs to be wrapped in a knockout
tag.

--- a/src/app/code/Komoju/Payments/view/frontend/web/template/payment/komoju_cc_form.html
+++ b/src/app/code/Komoju/Payments/view/frontend/web/template/payment/komoju_cc_form.html
@@ -28,7 +28,7 @@
         <div class="fieldset">
             <div class="field _required">
                 <label data-bind="attr: {for: getCode() + '_payment_type'}" class="label">
-                    Payment Type
+                    <!-- ko i18n: 'Payment Type'--><!-- /ko -->
                 </label>
 
                 <div class="control">
