Rename option fields
The value a select element returns is referred to as the value
attribute, and knockout calls it as such when generating the html
binding, so referring to it as the "key" and the display text as the
"value" is needlessly confusing.

--- a/src/app/code/Komoju/Payments/view/frontend/web/template/payment/komoju_cc_form.html
+++ b/src/app/code/Komoju/Payments/view/frontend/web/template/payment/komoju_cc_form.html
@@ -37,8 +37,8 @@
                             data-bind="
                                 attr: {id: getCode() + '_payment_type'},
                                 options: getEnabledPaymentTypes(),
-                                optionsValue: 'key',
-                                optionsText: 'value',
+                                optionsValue: 'value',
+                                optionsText: 'displayText',
                                 value: paymentMethod">
                     </select>
                 </div>
