add toggle for title

--- a/src/app/code/Komoju/Payments/view/frontend/web/template/payment/form.html
+++ b/src/app/code/Komoju/Payments/view/frontend/web/template/payment/form.html
@@ -4,6 +4,9 @@
  * See COPYING.txt for license details.
  */
 -->
+<!-- ko if: showTitle() -->
+  <h3 data-bind="text: getTitle()"></h3>
+<!-- /ko -->
 <!-- ko foreach: { data: getEnabledPaymentTypes(), as: 'method' } -->
   <div class="payment-method"
       data-bind="
