WIP: Making Hosted Field work

--- a/src/app/code/Komoju/Payments/view/frontend/web/template/payment/form.html
+++ b/src/app/code/Komoju/Payments/view/frontend/web/template/payment/form.html
@@ -7,29 +7,46 @@
 <!-- ko if: showTitle() -->
   <h3 data-bind="text: getTitle()"></h3>
 <!-- /ko -->
+<h1 data-bind="text: isDataLoaded()"></h1>
 <!-- ko foreach: { data: getEnabledPaymentTypes(), as: 'method' } -->
-  <div class="payment-method"
-      data-bind="
-      css: {'_active': (($parent.komojuMethod() == method.value) && ($parent.getCode() == $parent.isChecked()))},
-      attr: { id: method.value + '-node' }
-      ">
-      <div class="payment-method-title field choice">
-          <input type="radio"
-                 name="payment[method]"
-                 class="radio"
-                 data-bind="
-                 attr: {'id': method.value},
-                 value: method.value,
-                 checked: $parent.komojuMethod,
-                 click: $parent.selectPaymentMethod.bind($parent),
-                 visible: $parent.isRadioButtonVisible()
-                 "/>
-          <label class="label" data-bind="attr: {'for': method.value}">
-              <span data-bind="text: method.displayText"></span>
-          </label>
-      </div>
-  </div>
+<div class="payment-method"
+    data-bind="
+    css: {'_active': (($parent.komojuMethod() == method.value) && ($parent.getCode() == $parent.isChecked()))},
+    attr: { id: method.value + '-node' }
+    ">
+    <div class="payment-method-title field choice">
+        <input type="radio"
+                name="payment[method]"
+                class="radio"
+                data-bind="
+                attr: {'id': method.value},
+                value: method.value,
+                checked: $parent.komojuMethod,
+                click: $parent.selectPaymentMethod.bind($parent),
+                visible: $parent.isRadioButtonVisible()
+                "/>
+        <label class="label" data-bind="attr: {'for': method.value}">
+            <span data-bind="text: method.displayText"></span>
+        </label>
+    </div>
+</div>
 <!--/ko-->
+
+<div>
+    <h1>OUTSIDE DATA</h1>
+    <!-- ko if: isDataLoaded() -->
+    <!-- data-bind="attr: { 'session': getSession(), 'session-id: komojuSession().id }" -->
+    <komoju-fields
+        data-bind="attr: { 'session': getSession() }"
+        token = ""
+        name="komoju_payment_token"
+        locale="ja"
+        komoju-api="https://komoju.com"
+        payment-type="credit_card"
+        publishable-key="pk_test_lgva3j8ims1p3nhk3ut1f88t">
+    </komoju-fields>
+    <!-- /ko -->
+</div>
 
 <div class="payment-method-content komoju_payment_billing">
     <!-- ko foreach: getRegion('messages') -->
@@ -48,9 +65,9 @@
                     type="submit"
                     data-bind="
                     click: placeOrder,
-                    attr: {title: $t('Place Order')}
+                    attr: {title: $t('MEOWMEOW')}
                     ">
-                <span data-bind="i18n: 'Place Order'"></span>
+                <span data-bind="i18n: 'MEOWMEOW'"></span>
             </button>
         </div>
     </div>
